Drop magic values and use window geometry sans frames for intersection test.

Don't construct another KWindowInfo, either.

BUG:268259